added instructions for how to call the game function on the html and readme files

--- a/Rock_Paper_Scissors.html
+++ b/Rock_Paper_Scissors.html
@@ -6,6 +6,12 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <p>Open the console and enter one of the following calls:</p>
+    <ul>
+        <li>playRound()</li>
+        <li>playGame()</li>
+    </ul>
+
     <script src="rock_paper_scissors.js"></script>
 </body>
 </html>
