added buttons with on click functions to learn about event listeners

--- a/DOM_Manipulation.html
+++ b/DOM_Manipulation.html
@@ -7,9 +7,16 @@
     <script src="dom.js" defer></script>
 </head>
 <body>
+    
     <h1>This is the first exercise about working with DOM Manipulation</h1>
     <div id="container">
         <div class="content">This is the glorious text-content!</div>
     </div>
+
+    <button style="margin: 15px;" onclick="alertFunction()">Click Me</button>
+    <button style="margin: 15px;" id="btn2">Click Me Too</button>
+    <button style="margin: 15px;" id="btn3">Click Me Three</button>
+
+
 </body>
 </html>
