added buttons for human choice, button logic to alert choice from button ID (for testing) and a style sheet

--- a/Rock_Paper_Scissors.html
+++ b/Rock_Paper_Scissors.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="rock_paper_scissors.css">
     <title>Rock Paper Scissors</title>
 </head>
 <body>
@@ -11,6 +12,11 @@
         <li>playRound()</li>
         <li>playGame()</li>
     </ul>
+
+    <p>Alternatively, Click on the buttons below:</p>
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
 
     <script src="rock_paper_scissors.js"></script>
 </body>
