added end game function and connected it with the playgame function

--- a/Rock_Paper_Scissors.html
+++ b/Rock_Paper_Scissors.html
@@ -7,17 +7,14 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <p>Open the console and enter one of the following calls:</p>
-    <ul>
-        <li>playRound()</li>
-        <li>playGame()</li>
-    </ul>
 
-    <p>Alternatively, Click on the buttons below:</p>
+    <h1>Rock Paper Scissors Game</h1>
+    <p>Start a game by making a choice:</p>
     <button id="rock">Rock</button>
     <button id="paper">Paper</button>
     <button id="scissors">Scissors</button>
 
     <script src="rock_paper_scissors.js"></script>
+    
 </body>
 </html>
