added reset/clear grid button, and change grid size button and functionality for both

--- a/Etch_a_Sketch.html
+++ b/Etch_a_Sketch.html
@@ -9,6 +9,13 @@
 </head>
 <body>
 
+    <h1>Etch-a-Sketch</h1>
+
+    <div class="controls">
+        <button id="reset">Reset</button>
+        <button id="resize">Change Grid Size</button>
+    </div>
+
     <div id="container"></div>
     
 </body>
