--- a/calculator.html
+++ b/calculator.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="calculator.css">
-    <script src="calculator.js"></script>
+    <script src="calculator.js" defer></script>
     <title>JavaScript Calculator</title>
 </head>
 <body>
     <div class="calculator-container">
         
         <div class="output-row">
-            <div class="output">0</div>
+            <div id="display">0</div>
         </div>
 
         <div class="button-row">
