--- a/calculator.html
+++ b/calculator.html
@@ -16,34 +16,36 @@
 
         <div class="button-row">
             <div class="button span-two">AC</div>
-            <div class="button operation">/</div>
-            <div class="button operation">*</div>
+            <div class="button">&larr;</div>
+            <div class="button operation">/</div>            
         </div>        
 
         <div class="button-row">
             <div class="button">7</div>
             <div class="button">8</div>
             <div class="button">9</div>
-            <div class="button operation">-</div>
+            <div class="button operation">*</div>            
         </div>
 
         <div class="button-row">
             <div class="button">4</div>
             <div class="button">5</div>
             <div class="button">6</div>
-            <div class="button operation">+</div>
+            <div class="button operation">-</div>
+            
         </div>
         
         <div class="button-row">
             <div class="button">1</div>
             <div class="button">2</div>
             <div class="button">3</div>
-            <div class="button operation">=</div>
+            <div class="button operation">+</div>            
         </div>
 
         <div class="button-row">
-            <div class="button span-two">0</div>
+            <div class="button">0</div>
             <div class="button">.</div>
+            <div class="button operation span-two">=</div>            
         </div>        
 
     </div>    
