function and styling to visibly latch pressed operator button for clarity

--- a/calculator.html
+++ b/calculator.html
@@ -17,21 +17,21 @@
         <div class="button-row">
             <div class="button span-two">AC</div>
             <div class="button">&larr;</div>
-            <div class="button operation">/</div>            
+            <div class="button operation" id="/">/</div>            
         </div>        
 
         <div class="button-row">
             <div class="button">7</div>
             <div class="button">8</div>
             <div class="button">9</div>
-            <div class="button operation">*</div>            
+            <div class="button operation" id="*">*</div>            
         </div>
 
         <div class="button-row">
             <div class="button">4</div>
             <div class="button">5</div>
             <div class="button">6</div>
-            <div class="button operation">-</div>
+            <div class="button operation" id="-">-</div>
             
         </div>
         
@@ -39,7 +39,7 @@
             <div class="button">1</div>
             <div class="button">2</div>
             <div class="button">3</div>
-            <div class="button operation">+</div>            
+            <div class="button operation" id="+">+</div>            
         </div>
 
         <div class="button-row">
